// Original file: exa/cortex_pb/cortex.proto

import type { MqueryToolConfig as _exa_cortex_pb_MqueryToolConfig, MqueryToolConfig__Output as _exa_cortex_pb_MqueryToolConfig__Output } from '../../exa/cortex_pb/MqueryToolConfig';
import type { CodeToolConfig as _exa_cortex_pb_CodeToolConfig, CodeToolConfig__Output as _exa_cortex_pb_CodeToolConfig__Output } from '../../exa/cortex_pb/CodeToolConfig';
import type { IntentToolConfig as _exa_cortex_pb_IntentToolConfig, IntentToolConfig__Output as _exa_cortex_pb_IntentToolConfig__Output } from '../../exa/cortex_pb/IntentToolConfig';
import type { GrepToolConfig as _exa_cortex_pb_GrepToolConfig, GrepToolConfig__Output as _exa_cortex_pb_GrepToolConfig__Output } from '../../exa/cortex_pb/GrepToolConfig';
import type { FindToolConfig as _exa_cortex_pb_FindToolConfig, FindToolConfig__Output as _exa_cortex_pb_FindToolConfig__Output } from '../../exa/cortex_pb/FindToolConfig';
import type { ClusterQueryToolConfig as _exa_cortex_pb_ClusterQueryToolConfig, ClusterQueryToolConfig__Output as _exa_cortex_pb_ClusterQueryToolConfig__Output } from '../../exa/cortex_pb/ClusterQueryToolConfig';
import type { InspectClusterToolConfig as _exa_cortex_pb_InspectClusterToolConfig, InspectClusterToolConfig__Output as _exa_cortex_pb_InspectClusterToolConfig__Output } from '../../exa/cortex_pb/InspectClusterToolConfig';
import type { RunCommandToolConfig as _exa_cortex_pb_RunCommandToolConfig, RunCommandToolConfig__Output as _exa_cortex_pb_RunCommandToolConfig__Output } from '../../exa/cortex_pb/RunCommandToolConfig';
import type { KnowledgeBaseSearchToolConfig as _exa_cortex_pb_KnowledgeBaseSearchToolConfig, KnowledgeBaseSearchToolConfig__Output as _exa_cortex_pb_KnowledgeBaseSearchToolConfig__Output } from '../../exa/cortex_pb/KnowledgeBaseSearchToolConfig';
import type { ViewFileToolConfig as _exa_cortex_pb_ViewFileToolConfig, ViewFileToolConfig__Output as _exa_cortex_pb_ViewFileToolConfig__Output } from '../../exa/cortex_pb/ViewFileToolConfig';
import type { SuggestedResponseConfig as _exa_cortex_pb_SuggestedResponseConfig, SuggestedResponseConfig__Output as _exa_cortex_pb_SuggestedResponseConfig__Output } from '../../exa/cortex_pb/SuggestedResponseConfig';
import type { SearchWebToolConfig as _exa_cortex_pb_SearchWebToolConfig, SearchWebToolConfig__Output as _exa_cortex_pb_SearchWebToolConfig__Output } from '../../exa/cortex_pb/SearchWebToolConfig';
import type { MemoryToolConfig as _exa_cortex_pb_MemoryToolConfig, MemoryToolConfig__Output as _exa_cortex_pb_MemoryToolConfig__Output } from '../../exa/cortex_pb/MemoryToolConfig';
import type { CustomRecipeConfig as _exa_cortex_pb_CustomRecipeConfig, CustomRecipeConfig__Output as _exa_cortex_pb_CustomRecipeConfig__Output } from '../../exa/cortex_pb/CustomRecipeConfig';
import type { McpToolConfig as _exa_cortex_pb_McpToolConfig, McpToolConfig__Output as _exa_cortex_pb_McpToolConfig__Output } from '../../exa/cortex_pb/McpToolConfig';
import type { ProxyWebServerToolConfig as _exa_cortex_pb_ProxyWebServerToolConfig, ProxyWebServerToolConfig__Output as _exa_cortex_pb_ProxyWebServerToolConfig__Output } from '../../exa/cortex_pb/ProxyWebServerToolConfig';
import type { DeployWebAppToolConfig as _exa_cortex_pb_DeployWebAppToolConfig, DeployWebAppToolConfig__Output as _exa_cortex_pb_DeployWebAppToolConfig__Output } from '../../exa/cortex_pb/DeployWebAppToolConfig';
import type { ListDirToolConfig as _exa_cortex_pb_ListDirToolConfig, ListDirToolConfig__Output as _exa_cortex_pb_ListDirToolConfig__Output } from '../../exa/cortex_pb/ListDirToolConfig';
import type { ViewCodeItemToolConfig as _exa_cortex_pb_ViewCodeItemToolConfig, ViewCodeItemToolConfig__Output as _exa_cortex_pb_ViewCodeItemToolConfig__Output } from '../../exa/cortex_pb/ViewCodeItemToolConfig';
import type { ReadKnowledgeBaseItemToolConfig as _exa_cortex_pb_ReadKnowledgeBaseItemToolConfig, ReadKnowledgeBaseItemToolConfig__Output as _exa_cortex_pb_ReadKnowledgeBaseItemToolConfig__Output } from '../../exa/cortex_pb/ReadKnowledgeBaseItemToolConfig';
import type { ToolDescriptionOverrideMap as _exa_cortex_pb_ToolDescriptionOverrideMap, ToolDescriptionOverrideMap__Output as _exa_cortex_pb_ToolDescriptionOverrideMap__Output } from '../../exa/cortex_pb/ToolDescriptionOverrideMap';
import type { CommandStatusToolConfig as _exa_cortex_pb_CommandStatusToolConfig, CommandStatusToolConfig__Output as _exa_cortex_pb_CommandStatusToolConfig__Output } from '../../exa/cortex_pb/CommandStatusToolConfig';
import type { FindAllReferencesConfig as _exa_cortex_pb_FindAllReferencesConfig, FindAllReferencesConfig__Output as _exa_cortex_pb_FindAllReferencesConfig__Output } from '../../exa/cortex_pb/FindAllReferencesConfig';
import type { RunExtensionCodeConfig as _exa_cortex_pb_RunExtensionCodeConfig, RunExtensionCodeConfig__Output as _exa_cortex_pb_RunExtensionCodeConfig__Output } from '../../exa/cortex_pb/RunExtensionCodeConfig';
import type { AddAnnotationConfig as _exa_cortex_pb_AddAnnotationConfig, AddAnnotationConfig__Output as _exa_cortex_pb_AddAnnotationConfig__Output } from '../../exa/cortex_pb/AddAnnotationConfig';
import type { TrajectorySearchToolConfig as _exa_cortex_pb_TrajectorySearchToolConfig, TrajectorySearchToolConfig__Output as _exa_cortex_pb_TrajectorySearchToolConfig__Output } from '../../exa/cortex_pb/TrajectorySearchToolConfig';
import type { AutoCascadeBroadcastToolConfig as _exa_cortex_pb_AutoCascadeBroadcastToolConfig, AutoCascadeBroadcastToolConfig__Output as _exa_cortex_pb_AutoCascadeBroadcastToolConfig__Output } from '../../exa/cortex_pb/AutoCascadeBroadcastToolConfig';
import type { NotebookToolConfig as _exa_cortex_pb_NotebookToolConfig, NotebookToolConfig__Output as _exa_cortex_pb_NotebookToolConfig__Output } from '../../exa/cortex_pb/NotebookToolConfig';
import type { GrepV2ToolConfig as _exa_cortex_pb_GrepV2ToolConfig, GrepV2ToolConfig__Output as _exa_cortex_pb_GrepV2ToolConfig__Output } from '../../exa/cortex_pb/GrepV2ToolConfig';
import type { FindCodeContextToolConfig as _exa_cortex_pb_FindCodeContextToolConfig, FindCodeContextToolConfig__Output as _exa_cortex_pb_FindCodeContextToolConfig__Output } from '../../exa/cortex_pb/FindCodeContextToolConfig';
import type { SmartFriendToolConfig as _exa_cortex_pb_SmartFriendToolConfig, SmartFriendToolConfig__Output as _exa_cortex_pb_SmartFriendToolConfig__Output } from '../../exa/cortex_pb/SmartFriendToolConfig';
import type { ReadUrlContentToolConfig as _exa_cortex_pb_ReadUrlContentToolConfig, ReadUrlContentToolConfig__Output as _exa_cortex_pb_ReadUrlContentToolConfig__Output } from '../../exa/cortex_pb/ReadUrlContentToolConfig';
import type { ExitPlanModeToolConfig as _exa_cortex_pb_ExitPlanModeToolConfig, ExitPlanModeToolConfig__Output as _exa_cortex_pb_ExitPlanModeToolConfig__Output } from '../../exa/cortex_pb/ExitPlanModeToolConfig';
import type { AskUserQuestionToolConfig as _exa_cortex_pb_AskUserQuestionToolConfig, AskUserQuestionToolConfig__Output as _exa_cortex_pb_AskUserQuestionToolConfig__Output } from '../../exa/cortex_pb/AskUserQuestionToolConfig';

export interface CascadeToolConfig {
  'mquery'?: (_exa_cortex_pb_MqueryToolConfig | null);
  'code'?: (_exa_cortex_pb_CodeToolConfig | null);
  'intent'?: (_exa_cortex_pb_IntentToolConfig | null);
  'grep'?: (_exa_cortex_pb_GrepToolConfig | null);
  'find'?: (_exa_cortex_pb_FindToolConfig | null);
  'clusterQuery'?: (_exa_cortex_pb_ClusterQueryToolConfig | null);
  'inspectCluster'?: (_exa_cortex_pb_InspectClusterToolConfig | null);
  'runCommand'?: (_exa_cortex_pb_RunCommandToolConfig | null);
  'knowledgeBaseSearch'?: (_exa_cortex_pb_KnowledgeBaseSearchToolConfig | null);
  'viewFile'?: (_exa_cortex_pb_ViewFileToolConfig | null);
  'suggestedResponse'?: (_exa_cortex_pb_SuggestedResponseConfig | null);
  'searchWeb'?: (_exa_cortex_pb_SearchWebToolConfig | null);
  'memory'?: (_exa_cortex_pb_MemoryToolConfig | null);
  'customRecipe'?: (_exa_cortex_pb_CustomRecipeConfig | null);
  'mcp'?: (_exa_cortex_pb_McpToolConfig | null);
  'proxyWebServer'?: (_exa_cortex_pb_ProxyWebServerToolConfig | null);
  'deployWebApp'?: (_exa_cortex_pb_DeployWebAppToolConfig | null);
  'listDir'?: (_exa_cortex_pb_ListDirToolConfig | null);
  'viewCodeItem'?: (_exa_cortex_pb_ViewCodeItemToolConfig | null);
  'readKnowledgeBaseItem'?: (_exa_cortex_pb_ReadKnowledgeBaseItemToolConfig | null);
  'descriptionOverrideMap'?: (_exa_cortex_pb_ToolDescriptionOverrideMap | null);
  'commandStatus'?: (_exa_cortex_pb_CommandStatusToolConfig | null);
  'findAllReferences'?: (_exa_cortex_pb_FindAllReferencesConfig | null);
  'runExtensionCode'?: (_exa_cortex_pb_RunExtensionCodeConfig | null);
  'addAnnotation'?: (_exa_cortex_pb_AddAnnotationConfig | null);
  'trajectorySearch'?: (_exa_cortex_pb_TrajectorySearchToolConfig | null);
  'disableSimpleResearchTools'?: (boolean);
  'autoCascadeBroadcast'?: (_exa_cortex_pb_AutoCascadeBroadcastToolConfig | null);
  'notebook'?: (_exa_cortex_pb_NotebookToolConfig | null);
  'toolAllowlist'?: (string)[];
  'grepV2'?: (_exa_cortex_pb_GrepV2ToolConfig | null);
  'findCodeContext'?: (_exa_cortex_pb_FindCodeContextToolConfig | null);
  'smartFriend'?: (_exa_cortex_pb_SmartFriendToolConfig | null);
  'readUrlContent'?: (_exa_cortex_pb_ReadUrlContentToolConfig | null);
  'exitPlanMode'?: (_exa_cortex_pb_ExitPlanModeToolConfig | null);
  'askUserQuestion'?: (_exa_cortex_pb_AskUserQuestionToolConfig | null);
  '_disableSimpleResearchTools'?: "disableSimpleResearchTools";
}

export interface CascadeToolConfig__Output {
  'mquery': (_exa_cortex_pb_MqueryToolConfig__Output | null);
  'code': (_exa_cortex_pb_CodeToolConfig__Output | null);
  'intent': (_exa_cortex_pb_IntentToolConfig__Output | null);
  'grep': (_exa_cortex_pb_GrepToolConfig__Output | null);
  'find': (_exa_cortex_pb_FindToolConfig__Output | null);
  'clusterQuery': (_exa_cortex_pb_ClusterQueryToolConfig__Output | null);
  'inspectCluster': (_exa_cortex_pb_InspectClusterToolConfig__Output | null);
  'runCommand': (_exa_cortex_pb_RunCommandToolConfig__Output | null);
  'knowledgeBaseSearch': (_exa_cortex_pb_KnowledgeBaseSearchToolConfig__Output | null);
  'viewFile': (_exa_cortex_pb_ViewFileToolConfig__Output | null);
  'suggestedResponse': (_exa_cortex_pb_SuggestedResponseConfig__Output | null);
  'searchWeb': (_exa_cortex_pb_SearchWebToolConfig__Output | null);
  'memory': (_exa_cortex_pb_MemoryToolConfig__Output | null);
  'customRecipe': (_exa_cortex_pb_CustomRecipeConfig__Output | null);
  'mcp': (_exa_cortex_pb_McpToolConfig__Output | null);
  'proxyWebServer': (_exa_cortex_pb_ProxyWebServerToolConfig__Output | null);
  'deployWebApp': (_exa_cortex_pb_DeployWebAppToolConfig__Output | null);
  'listDir': (_exa_cortex_pb_ListDirToolConfig__Output | null);
  'viewCodeItem': (_exa_cortex_pb_ViewCodeItemToolConfig__Output | null);
  'readKnowledgeBaseItem': (_exa_cortex_pb_ReadKnowledgeBaseItemToolConfig__Output | null);
  'descriptionOverrideMap': (_exa_cortex_pb_ToolDescriptionOverrideMap__Output | null);
  'commandStatus': (_exa_cortex_pb_CommandStatusToolConfig__Output | null);
  'findAllReferences': (_exa_cortex_pb_FindAllReferencesConfig__Output | null);
  'runExtensionCode': (_exa_cortex_pb_RunExtensionCodeConfig__Output | null);
  'addAnnotation': (_exa_cortex_pb_AddAnnotationConfig__Output | null);
  'trajectorySearch': (_exa_cortex_pb_TrajectorySearchToolConfig__Output | null);
  'disableSimpleResearchTools'?: (boolean);
  'autoCascadeBroadcast': (_exa_cortex_pb_AutoCascadeBroadcastToolConfig__Output | null);
  'notebook': (_exa_cortex_pb_NotebookToolConfig__Output | null);
  'toolAllowlist': (string)[];
  'grepV2': (_exa_cortex_pb_GrepV2ToolConfig__Output | null);
  'findCodeContext': (_exa_cortex_pb_FindCodeContextToolConfig__Output | null);
  'smartFriend': (_exa_cortex_pb_SmartFriendToolConfig__Output | null);
  'readUrlContent': (_exa_cortex_pb_ReadUrlContentToolConfig__Output | null);
  'exitPlanMode': (_exa_cortex_pb_ExitPlanModeToolConfig__Output | null);
  'askUserQuestion': (_exa_cortex_pb_AskUserQuestionToolConfig__Output | null);
  '_disableSimpleResearchTools'?: "disableSimpleResearchTools";
}
